--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     </div>
 
     <script src="script.js" defer></script>
-    <script src="drag.js" defer></script>
+    <script src="todo.js" defer></script>
   </body>
 </html>
